# PDFChat

./: .env.example  .gitignore  LICENSE  QUICKSTART.md  README.md  create_sample_pdf.py  pyproject.toml  run.py
src/: __init__.py  config.py  models.py
src/agents/: __init__.py  qa_agent.py
src/api/: __init__.py  app.py
src/indexing/: __init__.py  build_index.py
static/: index.html
storage/: conversations.db
templates/: history.html  index.html
tests/: README.md  __init__.py  conftest.py  test_agents.py  test_api.py  test_build_index.py  test_config.py  test_models.py
